2000-08-18  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tkImgPhoto.c (ImgPhotoGet): Removed redundant call to
	DitherInstance; this call was formerly being made from
	ImgPhotoGet->ImgPhotoConfigureInstance->DitherInstance, and
	ImgPhotoGet->DitherInstance.  The second call was removed.

2000-08-10  Jeff Hobbs  <hobbs@scriptics.com>

	* doc/SetOptions.3: added missing ')'.

2000-08-09  Eric Melski  <ericm@ajubasolutions.com>

	* doc/SetOptions.3: Updated documentation to reflect support for
	TK_OPTION_NULL_OK for TK_OPTION_DOUBLE and TK_OPTION_PIXELS.

	* generic/tkConfig.c: Added for TK_OPTION_NULL_OK support for
	TK_OPTION_DOUBLE and TK_OPTION_PIXELS.

	* doc/place.n: Updated, reformatted manual entry.

	* tests/place.test: Added many tests.

	* generic/tkPlace.c (Tk_PlaceObjCmd): Updated to use Tk
	widget-option management facilities to manage place options (-x,
	-y, etc.), which simplifies the placer code.  Added support for
	[place configure pathName] and [place configure pathName -option],
	similar to the behavior of the configure subcommand supported by
	widgets.

2000-08-08  Eric Melski  <ericm@ajubasolutions.com>

	* tests/place.test: Extended test suite to test error returns from
	[place].

	* generic/tkInt.h: Replaced Tk_PlaceCmd prototype with
	Tk_PlaceObjCmd prototype.

	* generic/tkWindow.c: Updated [place] command entry to use new
	Tcl_Obj interface.

	* generic/tkPlace.c (Tk_PlaceObjCmd): Tcl_Obj'ified [place] command.

2000-08-07  Eric Melski  <ericm@ajubasolutions.com>

	* generic/tkWindow.c: Updated [selection] command entry to use
	new Tcl_Obj interface.

	* generic/tkInt.h: Replaced Tk_SelectionCmd prototype with
	Tk_SelectionObjCmd prototype.

	* tests/select.test: Updated test suite to recognize standardized
	error messages.

	* generic/tkSelect.c (Tk_SelectionObjCmd): Tcl_Obj'ified
	[selection] command.

2000-08-07  Jeff Hobbs  <hobbs@scriptics.com>

	* doc/cursors.n: changed .SS to more compatible macros.
