@@ -1,3 +1,8 @@
+2000-08-22  Jeff Hobbs  <hobbs@scriptics.com>
+
+	* generic/tkButton.c (ButtonTextVarProc): changed order of
+	incr/decr of new value object, in case they are equal.
+
 2000-08-18  Eric Melski  <ericm@ajubasolutions.com>
 
 	* generic/tkImgPhoto.c (ImgPhotoGet): Removed redundant call to
